--- a/app/src/main/res/drawable/ic_transparent.xml
+++ b/app/src/main/res/drawable/ic_transparent.xml
@@ -1,11 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <solid
-        android:color="#CAFFE6"/>
-    <stroke
-        android:color="#7BFA96"
-        android:width="2dp"/>
-    <corners
-        android:radius="10dp"/>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <size android:width="1dp" android:height="1dp" /> <!-- Kích thước 1x1 pixel -->
+    <solid android:color="@android:color/transparent" /> <!-- Màu trong suốt -->
 </shape>
